[#7] update current_user(get Authorization header) / update specs
