# app/controllers/user_groups_controller.rb
@@ -1,17 +1,17 @@
 class UserGroupsController < ApplicationController
-  before_action :load_group
-  before_action :load_group_owner
-  before_action -> { authenticate_user(@group, @owner) }
+  before_action :load_group, only: [:create]  
   before_action :load_user_group, only: [:destroy]  
   
   def create
+    authorize @group
     @group.users << User.find(params[:user_id])
     render status: :created
   end
   
   def destroy
+    authorize @user_group.group
     @user_group.destroy
-    render json: { message: "successfully destroy object" }, status: 204
+    render status: 204
   end
 
   private
@@ -19,11 +19,7 @@ class UserGroupsController < ApplicationController
     @group = Group.find(params[:group_id])
   end
 
-  def load_group_owner
-    @owner = User.find(params[:owner_id])
-  end
-
   def load_user_group
-    @user_group = @group.user_groups.find(params[:id])
+    @user_group = UserGroup.find(params[:id])
   end
 end
